[project]
name = "comfyui-textarea-is-shit"
description = "HTML gives me a textarea like piece of shit."
version = "1.0.1"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/shinich39/comfyui-textarea-is-shit"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "shinich39"
DisplayName = "comfyui-textarea-is-shit"
Icon = ""
